test notes 2017-12-15